--- a/packages/components/src/placeholder/style.scss
+++ b/packages/components/src/placeholder/style.scss
@@ -66,7 +66,8 @@
 }
 
 .components-placeholder__input {
-	margin: 0 8px 0 0;
+	margin-top: 0;
+	margin-right: 8px;
 	flex: 1 1 auto;
 }
 
@@ -84,7 +85,6 @@
 	margin-bottom: $grid-size; // If buttons wrap we need vertical space between.
 
 	&:last-child {
-		margin-bottom: 0;
 		margin-right: 0;
 	}
 }
